Swagger, API upd
